--- a/privacy.html
+++ b/privacy.html
@@ -1,90 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Privacy Policy - Darty</title>
     <style>
-        body {
-            font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            max-width: 800px;
-            margin: 0 auto;
-            padding: 40px 20px;
-            background-color: #f9f9f9;
-        }
-
-        h1 {
-            color: #1a1a1a;
-            border-bottom: 2px solid #6366f1;
-            padding-bottom: 10px;
-        }
-
-        h2 {
-            color: #1a1a1a;
-            margin-top: 30px;
-        }
-
-        p {
-            margin-bottom: 15px;
-        }
-
-        .last-updated {
-            color: #666;
-            font-style: italic;
-            margin-bottom: 30px;
-        }
-
-        .contact {
-            background-color: #f3f4f6;
-            padding: 20px;
-            border-radius: 8px;
-            border-left: 4px solid #6366f1;
-        }
+        body { font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif; line-height: 1.6; max-width: 800px; margin: 0 auto; padding: 20px; color: #1f2937; }
+        h1 { border-bottom: 2px solid #e5e7eb; padding-bottom: 10px; color: #111827; }
+        h2 { margin-top: 30px; color: #374151; font-size: 1.25em; }
+        h3 { color: #4b5563; font-size: 1.1em; margin-top: 20px; }
+        ul { margin-bottom: 15px; }
+        li { margin-bottom: 5px; }
+        .footer { margin-top: 50px; border-top: 1px solid #e5e7eb; pt-5; font-size: 0.9em; color: #6b7280; }
     </style>
 </head>
-
 <body>
     <h1>Privacy Policy for Darty</h1>
-    <p class="last-updated">Last Updated: January 17, 2026</p>
-
-    <p>Darty ("we", "our", or "us") provides a darts scoring and statistics application. This Privacy Policy explains
-        how we handle your information.</p>
-
-    <h2>1. Data Collection</h2>
-    <p><strong>Personal Data:</strong> Darty is designed to work primarily <strong>offline</strong>. We do not require
-        you to create an account or provide an email address to use the core features of the app.</p>
-    <p><strong>Device Information:</strong> We may collect basic, non-identifying technical data required for app
-        functionality, such as your device type and OS version, which is standard for apps built on the Expo platform.
-    </p>
-
-    <h2>2. Game Data</h2>
-    <p>Your game scores, statistics, and tournament progress are stored <strong>locally on your device</strong>. We do
-        not upload your personal game history to our servers unless you explicitly use a backup or sync feature (if
-        provided in future updates).</p>
-
-    <h2>3. Third-Party Services</h2>
-    <p>We use standard mobile platform services which may collect data according to their own policies:</p>
+    <p><strong>Last Updated:</strong> January 22, 2026</p>
+    <p><strong>Darty</strong> ("we", "our", or "us") provides a darts scoring and statistics application. This Privacy Policy explains how we handle your information.</p>
+    <h2>1. Data Collection & Usage</h2>
+    <h3>1.1 Personal Data & Local Storage</h3>
+    <p>Darty is designed to work primarily <strong>offline</strong>. We do <strong>not</strong> require you to create an account, provide an email address, or sign in to use the app. All game data, statistics, and user profiles are stored locally on your device.</p>
+    <h3>1.2 Device Information</h3>
+    <p>We may collect basic, non-identifying technical data required for app functionality (e.g., device model, operating system version) to assist with compatibility and crash reporting.</p>
+    <h3>1.3 Identifiers (Android Advertising ID / App Set ID)</h3>
+    <p>The application uses third-party services that may collect device identifiers (such as the Android Advertising ID or App Set ID) for fraud prevention, security, and subscription management purposes. We do not use these identifiers for behavioral advertising or marketing tracking.</p>
+    <h2>2. Third-Party Services</h2>
+    <p>We use the following third-party services which may collect data according to their own privacy policies:</p>
     <ul>
-        <li><strong>Apple App Store / Google Play:</strong> For installation and analytics.</li>
-        <li><strong>Expo:</strong> To provide over-the-air updates and crash reporting.</li>
+        <li><strong>RevenueCat:</strong> Used to manage subscription entitlements and purchase receipts.</li>
+        <li><strong>Expo:</strong> Used for over-the-air updates and monitoring app stability.</li>
+        <li><strong>Google Play Services:</strong> Used for core Android functionality.</li>
     </ul>
-
-    <h2>4. Advertising and Tracking</h2>
-    <p>Darty does not include third-party advertising or "tracking" pixels designed to follow you across other websites
-        or apps for marketing purposes.</p>
-
-    <h2>5. Changes to This Policy</h2>
-    <p>We may update our Privacy Policy from time to time. We will notify you of any changes by posting the new Privacy
-        Policy on this page and updating the "Last Updated" date.</p>
-
-    <div class="contact">
-        <h2>Contact Us</h2>
-        <p>If you have any questions about this Privacy Policy, you can contact us at:</p>
-        <p>Email: <strong>vibecheckmcvibey@gmail.com</strong></p>
-    </div>
+    <h2>3. Subscriptions & Financial Data</h2>
+    <p>We use <strong>RevenueCat</strong> to facilitate potential in-app purchases. While the app may currently be free, the infrastructure is present to verify purchase receipts.</p>
+    <ul>
+        <li>We do <strong>not</strong> process or store your credit card or financial information.</li>
+        <li>All transactions are processed securely by the <strong>Google Play Store</strong>.</li>
+    </ul>
+    <h2>4. Data Retention & Deletion</h2>
+    <p>Google Play policy requires us to clearly explain how you can delete your data.</p>
+    <ul>
+        <li><strong>Retention:</strong> Since we do not run a cloud database, your data exists only as long as the app is installed on your device.</li>
+        <li><strong>Deletion:</strong> You can delete all your data at any time by <strong>uninstalling the application</strong>. Alternatively, you can use the "Reset Everything" or "Clear All Stats" options found within the App Settings to wipe data without uninstalling.</li>
+    </ul>
+    <h2>5. Children’s Privacy</h2>
+    <p>Darty is a general audience app and does not knowingly collect personal information from children under the age of 13.</p>
+    <h2>Contact Us</h2>
+    <p>If you have any questions about this Privacy Policy, please contact us at:</p>
+    <p><strong>Email:</strong> vibecheckmcvibey@gmail.com</p>
 </body>
-
 </html>
