--- a/terms.html
+++ b/terms.html
@@ -76,7 +76,7 @@
     <div class="contact">
         <h2>Contact Us</h2>
         <p>If you have any questions about these Terms, please contact us:</p>
-        <p>Email: <strong>vibecheckmcvibey@gmail.com</strong></p>
+        <p>Email: <strong>danrush730@gmail.com</strong></p>
     </div>
 </body>
 
